@@ -886,21 +886,6 @@ function _getStyleSheetLink($filename, $skinname='') {
 	return '  <link rel="stylesheet" type="text/css" href="' .$url . '">';
 }
 
-function pluralize_n($amt, $one, $more, $none) {
-        switch ($amt) {
-                case 0 :
-                        return $none;
-                        break;
-                case 1 :
-			return $one;
-                        break;
-
-                default :
-                        return "$amt $more";
-                        break;
-        }
-}
-
 function errorRow($key) {
 	global $gErrors, $GALLERY_BASEDIR;
 
@@ -1079,10 +1064,14 @@ function makeGalleryUrl($target, $args=array()) {
 				$target = "modules.php";
 
 			break;
-			
+	
+			// Maybe something went wrong, then we assume we are like standalone.		
 			default:
 				$target = $gallery->app->photoAlbumURL . "/" . $target;
 		}
+	}
+	else {
+		$target = $gallery->app->photoAlbumURL . "/" . $target;
 	}
 
 	$url = $target;
@@ -2319,272 +2308,6 @@ function findInPath($program)
 	return false;
 }
 
-function initLanguage() {
-
-	global $gallery, $GALLERY_BASEDIR, $GALLERY_EMBEDDED_INSIDE, $GALLERY_EMBEDDED_INSIDE_TYPE;
-	global $HTTP_SERVER_VARS, $HTTP_COOKIE_VARS, $HTTP_GET_VARS, $HTTP_SESSION_VARS;
-
-	// $locale is *NUKEs locale var
-	global $locale ;
-
-	$nls = getNLS();
-
-	// before we do any tests or settings test if we are in mode 0
-	// If so, we skip language settings at all
-
-	$gallery->direction=$nls['default']['direction'];
-	$gallery->align=$nls['default']['alignment'];
-	if (isset($gallery->app->ML_mode)) {
-		// Mode 0 means no Multilanguage at all.
-		if($gallery->app->ML_mode == 0) {
-			// Maybe PHP has no gettext, then we have to substitute _()
-			if (! gettext_installed()) {
-				function _($string) {
-					return $string ;
-				}
-			}
-			$gallery->language = 'en_US';
-			$gallery->charset  = $nls['default']['charset'];
-			return;
-		}
-	}
-       // Detect Browser Language
-
-       if (isset($HTTP_SERVER_VARS["HTTP_ACCEPT_LANGUAGE"])) {
-		$lang = explode (",", $HTTP_SERVER_VARS["HTTP_ACCEPT_LANGUAGE"]);
-		$spos=strpos($lang[0],";");
-		if ($spos >0) {
-			$lang[0]=substr($lang[0],0,$spos);
-		}
-		$lang_pieces=explode ("-",$lang[0]);
-
-		if (strlen($lang[0]) ==2) {
-			$gallery->browser_language=$lang[0] ."_".strtoupper($lang[0]);
-		} else {
-			$gallery->browser_language=
-				strtolower($lang_pieces[0]).
-				"_".strtoupper($lang_pieces[1]) ;
-		}
-	}
-
-	// Does the user wants a new lanuage ?
-	if (isset($HTTP_GET_VARS['newlang'])) {
-		$newlang=$HTTP_GET_VARS['newlang'];
-	}
-
-	/**
-	 ** We have now several Ways. Embedded (PostNuke, phpNuke, phpBB2) or not embedded
-	 ** Now we (try) to do the language settings
-	 ** 
-	 ** Note: ML_mode is only used when not embedded
-	 **/
-
-	if (isset($GALLERY_EMBEDDED_INSIDE_TYPE)) {
-		/* Gallery is embedded */
-
-		/* Gallery can set nukes language, for phpBB2 this is not possible.
-		** So gallery will always use phpBB2's language.
-		*/
-
-		if (!empty($newlang)) {
-			// if there was a new language given, use it for nuke
-			$gallery->nuke_language=$newlang;
-		} else {
-			/* No new language.
-			** Lets see in which Environment were are and look for a language.
-			*/
-			
-			switch ($GALLERY_EMBEDDED_INSIDE_TYPE) {
-			case 'postnuke':
-				if (isset($HTTP_SESSION_VARS['PNSVlang'])) {
-					$gallery->nuke_language=$HTTP_SESSION_VARS['PNSVlang'];
-				}
-
-			case 'phpnuke':
-				if (isset($HTTP_COOKIE_VARS['lang'])) {
-					$gallery->nuke_language=$HTTP_COOKIE_VARS['lang'];
-				}
-
-				/* This is executed for both nukes */
-				if (isset ($gallery->session->language) && ! isset($gallery->nuke_language)) {
-					$gallery->language = $gallery->session->language;
-				} else if (isset ($nls['alias'][$gallery->nuke_language])) {
-					$gallery->language=$nls['alias'][$gallery->nuke_language];
-				}
-			break;
-			case 'phpBB2':
-				/* Gallery will always use phpBB2's language, so we override the mode to 1.
-				** And no pulldown or flags appear.
-				*/
-				global $board_config;
-				$gallery->app->ML_mode=1;
-				if (isset($board_config['default_lang'])) {
-					if (isset ($nls['alias'][$board_config['default_lang']])) {
-						$gallery->language = $nls['alias'][$board_config['default_lang']];
-					}
-				}				
-			break;
-			}
-		}
-	} else {
-		// We're not in Nuke
-		// If we got a ML_mode from config.php we use it
-		// If not we use Mode 2 (Browserlanguage)
-
-		if (isset($gallery->app->ML_mode)) {
-			$ML_mode=$gallery->app->ML_mode;
-		} else {
-			$ML_mode=2;
-		}
-
-		switch ($ML_mode) {
-			case 1:
-				//Static Language
-				$gallery->language = $gallery->app->default_language;
-				break;
-			case 3:
-				// Does the user want a new language ?
-				if (!empty($newlang)) {
-					// Use Alias if
-					if (isset($nls['alias'][$newlang])) $newlang=$nls['alias'][$newlang] ;
-					// Set Language to the User selected language (if this language is defined)
-					if (isset($nls['language'][$newlang])) {
-						$gallery->language=$newlang;
-					}
-				} elseif (isset($gallery->session->language)) {
-					//maybe we already have a language
-					$gallery->language=$gallery->session->language;
-				}
-				break;
-			default:
-				// Use Browser Language or Userlanguage 
-				// when mode 2 or any other (wrong) mode
-				if (!empty($gallery->user) && 
-						$gallery->user->getDefaultLanguage() != "") {
-					$gallery->language = $gallery->user->getDefaultLanguage();
-				} elseif (isset($gallery->browser_language)) {
-					$gallery->language=$gallery->browser_language;
-				}
-				break;
-		}
-	}
-
-	/**
-	 **  Fall back to Default Language if :
-	 **	- we cant detect Language
-	 **	- Nuke/phpBB2 sent an unsupported
-	 **	- User sent an undefined
-	 **/
-	if (empty($gallery->language)) {
-		if (isset($gallery->app->default_language)) {
-			$gallery->language = $gallery->app->default_language;
-		} elseif(isset($gallery->browser_language)) {
-			$gallery->language = $gallery->browser_language;
-		} else {
-			// when we REALLY REALLY cant detect a language
-			$gallery->language="en_US";
-		}
-	}
-
-	// if an alias for a language is given, use it
-	//
-	if (isset($nls['alias'][$gallery->language])) {
-		$gallery->language = $nls['alias'][$gallery->language] ;
-	}
-
-	// And now set this language into session
-	$gallery->session->language = $gallery->language;
-
-	// locale
-	if (isset($gallery->app->locale_alias[$gallery->language])) {
-		$gallery->locale=$gallery->app->locale_alias["$gallery->language"];
-	} else {
-		$gallery->locale=$gallery->language;
-	}
-
-	// Override NUKEs locale :)))	
-	$locale=$gallery->locale;
-
-
-	// Check defaults :
-	$checklist=array('direction', 'charset', 'alignment') ;
-
-	foreach($checklist as $check) {
-		// if no ... is given, use default
-		if ( !isset($nls[$check][$gallery->language])) {
-			$gallery->$check = $nls['default'][$check] ;
-		} else {
-			$gallery->$check = $nls[$check][$gallery->language] ;
-		}
-	}
-
-	// When all is done do the settings
-	//
-	if (getOS() != OS_SUNOS) {
-		putenv("LANG=". $gallery->language);
-	}
-	putenv("LANGUAGE=". $gallery->language);
-
-	// Set Locale
-	setlocale(LC_ALL,$gallery->locale);
-
-	// Set Charset
-	// Only when we're not in nuke, because headers might be sent already.
-	if (! isset($GALLERY_EMBEDDED_INSIDE)) {
-		header('Content-Type: text/html; charset=' . $gallery->charset);
-	}
-
-
-	/**
-	 ** Test if we're using gettext.
-	 ** if yes, do some gettext settings.
-	 ** if not emulate _() function
-	 **/
-
-	if (gettext_installed()) {
-		$bindtextdomain=bindtextdomain($gallery->language. "-gallery_". where_i_am(), $GALLERY_BASEDIR."locale");
-		textdomain($gallery->language. "-gallery_". where_i_am());
-
-	}  else {
-		emulate_gettext();
-	}
-}
-
-function emulate_gettext() {
-	global $translation;
-	global $GALLERY_BASEDIR, $gallery;
-
-	if (in_array($gallery->language,array_keys(gallery_languages())) &&
-		$gallery->language != 'en_US') {
-		$filename=$GALLERY_BASEDIR ."locale/". $gallery->language ."/". $gallery->language ."-gallery_". where_i_am()  .".po";
-		$lines=file($filename);
-
-		foreach ($lines as $key => $value) {
-			/* We trim the String to get rid of cr/lf */
-			$value=trim($value);
-			if (stristr($value, "msgid") && ! stristr($lines[$key-1],"fuzzy")) {
-				$new_key=substr($value, 7,-1);
-				$translation[$new_key]=substr(trim($lines[$key+1]),8,-1);
-			}
-		}
-		// Substitute _() gettext function
-		function _($search) {
-			if (! empty($GLOBALS['translation'][$search])) {
-				return $GLOBALS['translation'][$search] ;
-			}
-			else {
-				return $search;
-			}
-		}
-	}
-	// There is no translation file or we are using original (en_US), so just return what we got
-	else {
-		function _($search) {
-			return $search;
-		}
-	}
-}
-
 /* little function useful for debugging.  no calls to this should be in 
    committed code. */
 
@@ -2930,15 +2653,6 @@ Gallery @ %s Administrator.");
 
 }
 
-function gettext_installed() {
-	if (in_array("gettext", get_loaded_extensions()) && function_exists('gettext') && function_exists('_')) {
-		return true;
-	}
-	else {
-		return false;
-	}
-}
-
 function available_skins($description_only=false) {
 	global $GALLERY_BASEDIR;
 
@@ -3138,51 +2852,6 @@ function album_validation_link($album, $photo='', $valid=true) {
 	return $link;
 }
 
-//returns all languages in this gallery installation
-function gallery_languages() {
-	$nls=getNLS();
-	return $nls['language'];
-}
-
-function getNLS() {
-	global $GALLERY_BASEDIR;
-	static $nls;
-
-	if (empty($nls)) {
-
-		$nls=array();
-		// Load defaults
-		include ($GALLERY_BASEDIR. "nls.php");
-
-		$modules=array('config','core');
-		$dir=$GALLERY_BASEDIR. "locale";
-	       	if (fs_is_dir($dir) && is_readable($dir) && $handle = fs_opendir($dir)) {
-	
-		    while ($dirname = readdir($handle)) {
-			if (ereg("^([a-z]{2}_[A-Z]{2})", $dirname)) {
-				$locale=$dirname;
-				$fc=0;
-				foreach ($modules as $module) {
-					if (gettext_installed()) {
-						if (fs_file_exists($GALLERY_BASEDIR . "locale/$dirname/$locale-gallery_$module.po")) $fc++;
-					} else {
-						if (fs_file_exists($GALLERY_BASEDIR . "locale/$dirname/LC_MESSAGES/$locale-gallery_$module.mo")) $fc++;
-					}
-				}
-				if (fs_file_exists($GALLERY_BASEDIR . "locale/$dirname/$locale-nls.php") && $fc==sizeof($modules)) {
-					include ($GALLERY_BASEDIR . "locale/$dirname/$locale-nls.php");
-				}
-			}
-		}
-		closedir($handle);
-	    }
-	}
-
-//print_r($nls);
-return $nls;
-}
-
-
 function where_i_am() {
 	global $GALLERY_OK;
 
@@ -3203,10 +2872,6 @@ function user_name_string($uid, $format='!!FULLNAME!! (!!USERNAME!!)') {
        	} else {
 		return $user->printableName($format);
 	}
-}
-
-function i18n($buf) {
-       	return $buf;
 }
 
 // Returns the CVS version as a string, NULL if file can't be read, or "" 
@@ -3324,28 +2989,6 @@ function checkVersions($verbose=false) {
        	return array($success, $fail, $warn);
 }
 
-function unhtmlentities ($string)
-{
-	global $gallery;
-
-	if (function_exists('html_entity_decode')) {
-		$nls=getNLS();
-		if (isset ($nls['charset'][$gallery->language])) {
-			$charset=$nls['charset'][$gallery->language];
-		} else {
-			$charset=$nls['default']['charset'];
-		}
-		$return= html_entity_decode($string,ENT_COMPAT,$charset);
-	} else {
-		// For users prior to PHP 4.3.0 you may do this:
-		$trans_tbl = get_html_translation_table (HTML_ENTITIES);
-		$trans_tbl = array_flip ($trans_tbl);
-		$return = strtr ($string, $trans_tbl);
-	}
-
-return $return;
-}
-
 function contextHelp ($link) {
 	global $gallery;
 	
@@ -3353,4 +2996,6 @@ function contextHelp ($link) {
 		return popup_link ('?', 'docs/context-help/' . $link, false, true, 500, 500);
 	}
 }
+
+require ($GALLERY_BASEDIR . "lib/lang.php");
 ?>
