@@ -5,6 +5,13 @@
 
 	* New: Added g1-icon.gif
 
+	* Bugfix: When not embedded and mod_rewrite was on, makeGalleryUrl was broken.
+
+	* New: lib folder.
+
+	* Change: extracted all language related functions from util.php
+		  into lib/lang.php and include them in util.php.
+
 2004-01-23 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b2
 
         * New: implemented Code for Gallery phpBB2 integration.
